fixed image layout issue

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -23,28 +23,17 @@ ul {
 	bottom: 5rem;
 }
 
-/* background image */
-.picture {
-	background-image: url(../documentation/images/surface-planets.jpg);
-	background-repeat: no-repeat;
-	background-position: center;
+main {
+	height: 100vh;
+	background: url(../documentation/images/surface-planets.jpg) no-repeat center;
+	background-attachment: fixed;
 	background-size: cover;
-	position: fixed;
-	opacity: .4;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	z-index: 1;
-	will-change: transform;
+	opacity: 0.5;
 }
-/*
-.about {
-	background-color: rgba(36, 41, 43, 1);
-	color: white;
-	position: relative;
-	z-index: 1;
-	height: 100%;
-	padding: 90px 0;
+
+section {
+	padding: 10rem 0;
 }
-*/
+
+
+
